$Id: History,v 1.48 2002-11-27 18:06:41 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Nov 27, 2002, M.Asai (intercoms-V04-01-03)
- Fix memory leak in G4UIcommand.hh.

Nov 20, 2002, G.Cosmo (intercoms-V04-01-02)
- Patched access to public static data in G4VGlobalFastSimulationManager
  and G4VVisManager. Added static accessors to be used in the kernel to
  allow porting on Windows DLLs.

Nov 01, 2002, M.Asai (intercoms-V04-01-01)
- Tagged for Geant4 5.0

Oct 29, 2002, M.Asai
- Fixed uninitialized data member in G4UIcommand.cc

Oct 17, 2002, J.Allison (intercoms-V04-01-00 with vis-V04-01-02)
- Added two new pure virtual functions to G4VGraphicsScene:
    AddThis(const G4VTrajectory&)
    AddThis(const G4VHit&)

Jun 7, 2002, M.Asai (intercoms-V04-00-04)
- Fix for a warning message in G4UIbatch.

May 15, 2002, M.Asai (intercoms-V04-00-03)
- Limit number of stored command string. (improvements)

May 14, 2002, M.Asai (intercoms-V04-00-02)
- Limit number of stored command string.

May 3, 2002, M.Asai (intercoms-V04-00-01)
- Recover G4UImanager::ApplyCommand(G4String) to accept + operator

Apr 26, 2002, M.Asai (intercoms-V04-00-00)
- Eliminate naive G4String type arguments
 Modified classes :