@@ -1,4 +1,4 @@
-$Id: History,v 1.48 2002-11-27 18:06:41 asaim Exp $
+$Id: History,v 1.49 2002-12-04 18:30:39 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Dec 4, 2002, M.Asai (intercoms-V04-01-04)
+- Migration to new G4ApplicationState.
 
 Nov 27, 2002, M.Asai (intercoms-V04-01-03)
 - Fix memory leak in G4UIcommand.hh.
